Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71895

[REG 5.10->5.11] When calling clearHttpCache() it can cause a crash when loading a url

XMLWordPrintable

    • fc382c92021954593e6d8d07ee3f0792c4ad5c17 (qt/qtwebengine/5.12.1)

      When calling clearHttpCache() it can cause a crash when loading a url, this depends on the profile settings, o if cookies are cleared and disabled too after clearing then it makes the crash more likely

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes