Fix recreation of cookie store and channel id service

As more things gets mojofy and become services,
we can not simply delete parts of storage context.
Therefore regenerate whole storage in case of cookie
store, cache, agent settings updates. URLRequestContextStorage
guards correct order of destruction.

This change aims to fix some crashes during cookie store and
http cache recreation when ChannelIDService gets deleted.
Depending on timing this ends with different stacktraces like
in cookie store manager or during ssl handshake.

We still keep network delegate outside of storage context to
prevent crashes when url requests end their life due
to (forced) request cancellation in cancelAllUrlRequests().

Please note this is just band-aid patch, and introduction of
'profile builder' will be a proper fix.

Fixes: QTBUG-71895
Change-Id: If33a7af3ebba2632ea33f32d913e1c21a4534817
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>