src/core/profile_io_data_qt.h
@@ -105,6 +105,8 @@ public:
     void updateHttpCache(); // runs on ui thread
     void updateJobFactory(); // runs on ui thread
     void updateRequestInterceptor(); // runs on ui thread
+    void requestStorageGeneration(); //runs on ui thread
+    void createProxyConfig(); //runs on ui thread
 
 private:
     ProfileQt *m_profile;
@@ -140,10 +142,7 @@ private:
     int m_httpCacheMaxSize = 0;
     bool m_initialized = false;
     bool m_updateAllStorage = false;
-    bool m_updateCookieStore = false;
-    bool m_updateHttpCache = false;
     bool m_updateJobFactory = false;
-    bool m_updateUserAgent = false;
     bool m_ignoreCertificateErrors = false;
     base::WeakPtrFactory<ProfileIODataQt> m_weakPtrFactory; // this should be always the last member
     QString m_dataPath;
